# OpenGL_env

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: main.cpp
